# smartone_quant

./: .env  .gitignore  configInfo.txt  main.py  pyproject.toml
app/: .env  main.py
app/api/: deps.py  main.py  router_main.py
app/core/: config.py  db.py
app/cruds/: akshare_trade_calendar_crud.py  qmt_sector_crud.py  qmt_sector_stock_crud.py  qmt_stock_daily_crud.py  qmt_stock_divid_factors_crud.py  qmt_stock_monthly_crud.py  qmt_stock_weekly_crud.py  smart_user_crud.py
app/jupyters/: akshare_data_verify.ipynb  auto_upload_to_git.ipynb  qmt_get_sector.ipynb  qmt_get_stock_data.ipynb  获取板块列表和成分股.ipynb  获取股票行情数据.ipynb
app/models/: Smart_User.py  akshare_trade_calendar.py  qmt_sector.py  qmt_sector_stock.py  qmt_stock_daily.py  qmt_stock_divid_factors.py  qmt_stock_monthly.py  qmt_stock_weekly.py
app/services/: akshare_trade_calendar_service.py  export_sector_stocks_service.py  qmt_data_to_csv.py  qmt_klines_data_to_csv.py  qmt_sector_service.py  qmt_sector_stock_service.py  qmt_stock_daily_service.py  qmt_stock_divid_factors_service.py  qmt_stock_monthly_service.py  qmt_stock_weekly_service.py  sync_klines_service.py
app/strategys/: hs300_rsi_strategy.py
app/tests/: __init__.py  test_qmt_sector_crud.py  (+1 more)
bats/: auto_push.bat
data_manager/: crud_api.py  data_feed.py  qmt_fun.py
doc/: qmt-install.txt  数据库设计.md
example/: 交易接口重连.ipynb  单股订阅实盘示例.ipynb  定时判断实盘示例.ipynb  订阅全推数据和下载历史数据.ipynb
quant_data/: __init__.py  config.yaml  utils.py
quant_utils/: quant_logger.py
utils/: calendarUtil.py  loggerUtil.py  metadataUtil.py  quant_logger.py
(+15562 files in other folders)
